feat: add header

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Resume</title>
+    <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="menu">
+            <ul>
+                <li><a href="#contacts" class="link1">Contacts</a></li>
+                <li><a href="#summary, skills" class="link1">Summary</a></li>
+                <li><img src="images/github.png" alt="github" width="30" height="30"><a href="https://github.com/Qairkhan" class="link1">Experience</a></li>
+                <li><a href="#summary, skills" class="link1">Skills</a></li>
+                <li><a href="#education" class="link1">Education</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
